set known_hosts file to /dev/null
Change-Id: Ie2a870273f4f89fa4573741f58be1727e096a0cb
Signed-off-by: Joshua Rubin <jrubin@zvelo.com>

--- a/zvelo-gerrit.service
+++ b/zvelo-gerrit.service
@@ -26,6 +26,7 @@ ExecStart=/bin/bash -c " \
     -e IMAGE_NAME=zvelo/%p \
     -v /home/core/data/%p/volume:/opt/gerrit/volume \
     -v /home/core/data/%p/index:/opt/gerrit/index \
+    -v /home/core/data/%p/logs:/opt/gerrit/logs \
     zvelo/%p \
   "
 ExecStop=/usr/bin/docker stop %p
